# Natalnye-Karty-Bot

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
deployment/: Dockerfile
natalnye_karty_bot/: bot.py  clients.py  utils.py
